# sendsmtp

./: LICENSE  README.md  README.rst  pyproject.toml
sendsmtp/: __main__.py  cli.py  sender.py
